# mlir-wasm-dialect

./: .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  cloc-dialect-files.txt  cloc-files.txt  compile-baseline.sh  compile-llvm.sh  compile.sh  run-aot.sh  run-mcu.sh  run.sh  run_aot.sh
aot-compiler/: Dockerfile
async/: Makefile  README.md  async_runtime.c  example-manualedit.mlir  example.mlir  stack-switching.mlir
docs/: loop-stackification-fix.md  stack-switching-missing-issues.md  unstaged-changes-review-2026-02-14.md  wami-stack-switching-design-plan.md  wami-stack-switching-explainer-canonical.md
examples/: README.md  async.mlir  (+2 more)
local-executor/: .gitignore  CMakeLists.txt  Makefile  README.md
local-executor/src/: main.c
mcu-wasm-executor/: .gitignore  CMakeLists.txt  README.md  prj.conf
mcu-wasm-executor/aot-compiler/: Dockerfile  README.md  README.txt  compile_aot.sh
mcu-wasm-executor/src/: atax_llvm.h  atax_mlir.h  bicg_llvm.h  bicg_mlir.h  doitgen_llvm.h  doitgen_mlir.h  gemm_llvm.h  gemm_mlir.h  gemver_llvm.h  gemver_mlir.h  gesummv_mlir.h  main.c  mnist_llvm.h  mnist_mlir.h  mvt_llvm.h  mvt_mlir.h  syr2k_llvm.h  syr2k_mlir.h  three_mm_llvm.h  three_mm_mlir.h  utility.h  wasm.h
test/: CMakeLists.txt  arith-and-func.mlir  block-param.mlir  conv2d-linalg.mlir  conv2d-linked.wasm  conv2d-linked.wat  conv2d-llvm.mlir  conv2d-tosa.mlir  conv2d.mlir  conv2d.wat  lenet-linalg.mlir  lenet-tosa.mlir  lenet.mlir  lit.cfg.py  lit.site.cfg.py.in  multi-value.mlir  simple.mlir  simplef.mlir
test/CAPI/: CMakeLists.txt  wasm-capi-test.c
test/Coro/: coro-to-wami-yield.mlir  coro-to-wami.mlir
test/DCont/: README.md  generator-llvm.mlir  generator.mlir  toy-llvm.mlir  toy-scheduler-llvm.mlir  toy-scheduler.mlir  toy.mlir  toy.wat
test/Intermittent/: example.mlir  simple.mlir
test/SsaWasm/: arith.mlir  memref.mlir  scf-simple.mlir  scf.mlir
test/Transforms/: affine-promote-accumulators.mlir  affine-simplify-if.mlir  hoist-from-scf-if.mlir  promote-loop-accumulators.mlir  reassociate-additions.mlir  reassociate-reductions.mlir  remainder-to-and.mlir  simplify-remainder.mlir  strength-reduce-absorb.mlir  strength-reduce-safe.mlir  strength-reduce.mlir
test/WAMI/: coro-to-llvm.mlir  coro-to-wami-yield.mlir  coro-to-wami.mlir  coro-verify-intrinsics-errors.mlir  coro-verify-intrinsics.mlir  full-pipeline-edge-cases.mlir  math-conversion.mlir  memref-conversion-comprehensive.mlir  scf-nested-loop-bug.mlir  spec-gap-resume-throw-e4.mlir  type-conversion-comprehensive.mlir  wami-convert-all.mlir  wami-convert-arith.mlir  wami-convert-func.mlir  wami-convert-math-fail.mlir  wami-convert-math.mlir  wami-convert-memref.mlir  wami-convert-scf-i1-results.mlir  wami-convert-scf-if-i1-result-fail.mlir  wami-convert-scf.mlir  wami-integrated-pipeline.mlir  wami-memref-alignment.mlir  wami-split-pipeline-memref-args.mlir  wami-stack-switching-verify-errors-cont-new-signature.mlir  wami-stack-switching-verify-errors-null-resume-throw.mlir  wami-stack-switching-verify-errors-null-resume.mlir  wami-stack-switching-verify-errors-on-switch-shape.mlir  wami-stack-switching-verify-errors-ref-null-nonnull-cont.mlir  wami-stack-switching-verify-errors.mlir  wami-stack-switching.mlir
test/Wasm/: dummy.mlir  wasm-opt.mlir  wasm-pass-plugin.mlir  wasm-plugin.mlir  wasm-translate.mlir
test/integration/benchmarks/: README.md  arith-basic.mlir  func-call.mlir  global-matrix-determinant.mlir  memref-alloc-load-store.mlir  mixed-kernel.mlir  scf-if-else.mlir  scf-loop-sum.mlir  stackify-if-input-local-init-runtime.mlir  stackify-multi-result-call-order-runtime.mlir
test/integration/coro/: coro-generator-loop-runtime.mlir  run_coro_program.sh
test/integration/stack-switching/: README.md  coro-generator-loop-runtime.mlir  coro-interruptible-search-runtime.mlir  coro-oneshot-runtime.mlir  coro-oneshot-trace-runtime.mlir  coro-scheduler-runtime.mlir  run_coro_program.sh  run_wizard_bin.py  spec-example-corpus-runtime.mlir  spec-example-corpus-verify.mlir  wami-stack-switching-runtime.mlir  wami-stack-switching-trace.mlir  wizard-print-i32-runtime.mlir  wizard-smoke-runtime.mlir
test/python/: smoketest.py
test/wasmstack/: basic.mlir  control-flow-conversion.mlir  control-flow-test.mlir  convert-lowers-module-level-globals-data.mlir  convert-rejects-existing-wasmstack-module.mlir  convert-rejects-unhandled-op.mlir  convert-wami-stack-switching-nullable-cont-type.mlir  convert-wami-stack-switching-select-cont.mlir  convert-wami-stack-switching.mlir  convert-wraps-module.mlir  coro-benchmarks-compile.mlir  deep-nesting.mlir  emit-binary-from-top-level.mlir  emit-binary-imported-func-call.mlir  emit-binary-integration-validate.mlir  emit-binary-local-missing-cont-type-diagnostic.mlir  emit-binary-memref-alloc-import.mlir  emit-binary-missing-branch-label.mlir  emit-binary-multiple-modules-error.mlir  emit-binary-no-ref-func-no-element.mlir  emit-binary-ref-func-declarations.mlir  emit-binary-reloc-ref-func-link.mlir  emit-binary-reloc-ref-func-sections.mlir  emit-binary-stack-switching.mlir  emit-binary-type-cont-diagnostic.mlir  emit-binary-unresolved-symbol-error.mlir  full-pipeline-verify.mlir  nested-block-in-loop.mlir  return-values.mlir  simple.mlir  spec-gap-switch-resume-throw-results.mlir  stack-switching-extended.mlir  stack-switching.mlir  stackification-analyzes-all-blocks.mlir  stackification-deterministic-local-order.mlir  stackification-edge-cases.mlir  stackify-if-branch-if-with-args.mlir  stackify-if-exit-level-resolution.mlir  stackify-if-input-local-initialization.mlir  stackify-multi-result-call-order.mlir  (+13 more)
wasm-emit/: CMakeLists.txt  wasm-emit.cpp
wasm-opt/: CMakeLists.txt  wasm-opt.cpp
wasm-translate/: CMakeLists.txt  libc.wat  wasm-translate.cpp
wasmer-executor/: Cargo.toml  README.md
wasmer-executor/src/: main.rs
wasmtime-executor/: Cargo.toml  README.md  lenet-mlir.mlir  lenet-optimized-llvm-llvm.mlir  lenet-unoptimized-llvm.ll
wasmtime-executor/src/: cli.rs  host_env.rs  main.rs  result_check.rs  runtime.rs
(+493 files in other folders)
