[package]
name = "run-wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "run_wasm_lib"
path = "src/lib.rs"
bench = false

[[bin]]
name = "run_wasm_bin"
path = "src/main.rs"
bench = false

[dependencies]
wasmtime = { version = "31.0.0", features = ["pulley"] }
wasi-common = "22.0.0"
bytemuck = { version = "1.16.1", features = ["derive"] }
aligned-array = "1.0.1"
structopt = "0.3.26"
once_cell = "1.21.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "wasmtime_bench"
harness = false
