[package]
name = "run-wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "run_wasm_lib"
path = "src/lib.rs"
bench = false

[[bin]]
name = "run_wasm_bin"
path = "src/main.rs"
bench = false

[dependencies]
wasmtime = "31.0.0"
anyhow = "1.0.97"
bytemuck = { version = "1.16.1", features = ["derive"] }
structopt = "0.3.26"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "wasmtime_bench"
harness = false
